--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       content="Welcome to Bookshop - Your one-stop shop for books and literature. Explore a wide range of books across various genres, and enjoy a seamless shopping experience."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Bookshop</title>
+    <title>UniBooks</title>
   </head>
   <body>
     <noscript>
